# OS-cache-simulator

./: .gitignore  CMakeLists.txt
include/: bus.h  cache.h  cache_line.h  cache_simulator.h  lfu_cache.h  lru_cache.h
scripts/: cache_hit_rate_vs_access_pattern.py  cache_hit_rate_vs_cache_size.py  cache_hit_rate_vs_num_accesses.py  cache_hit_rate_vs_ws_period.py
src/: bus.cpp  cache.cpp  cache_simulator.cpp  lfu_cache.cpp  lru_cache.cpp  main.cpp
test/: cache_test.cpp
